Update and cleanup